storeit_macros/tests/ui/fail/repository_unknown_list.stderr
error: Unknown attribute list
 --> tests/ui/fail/repository_unknown_list.rs:7:47
  |
7 | #[repository(entity = User, backend = Libsql, wronglist(find_by_email: String))]
  |                                               ^^^^^^^^^
